# ChangeLog for dev-perl/FreezeThaw
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/FreezeThaw/ChangeLog,v 1.16 2006/04/21 21:18:31 gustavoz Exp $

  21 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  FreezeThaw-0.43-r1.ebuild:
  Stable on hppa

  13 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  FreezeThaw-0.43-r1.ebuild:
  Keyworded ~hppa wrt #112414

  25 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  FreezeThaw-0.43-r1.ebuild, -FreezeThaw-0.43.ebuild:
  cleaning

  17 Apr 2004; Michael McCabe <randy@gentoo.org> FreezeThaw-0.43-r1.ebuild:
  added s390 to keywords

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> FreezeThaw-0.43-r1.ebuild:
  stable on alpha and ia64

*FreezeThaw-0.43-r1 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  08 Jun 2003; <rac@gentoo.org> FreezeThaw-0.43-r1.ebuild,
  FreezeThaw-0.43.ebuild:
  Add IUSE, stabilize URL, fix header

  13 Feb 2003; Mark Guertin <gerk@gentoo.org> FreezeThaw-0.43-r1.ebuild FreezeThaw-0.43.ebuild :
  set ppc in keywords

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations

*FreezeThaw-0.43 (25 Oct 2002)

  25 Oct 2002; <mcummings@gentoo.org> FreezeThaw-0.43.ebuild :