@@ -1,1 +1,3 @@
 MD5 705efa533b366151953a5e2b1744650f FreezeThaw-0.43.tar.gz 10645
+RMD160 5b94624389d4265f2b8e369be190b5d4a620a19e FreezeThaw-0.43.tar.gz 10645
+SHA256 f40cf2cfdb3e29dfba5fb01879a860300b078cf1902890caec65dcf7546155e1 FreezeThaw-0.43.tar.gz 10645
