@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/FreezeThaw
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/FreezeThaw/ChangeLog,v 1.16 2006/04/21 21:18:31 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/FreezeThaw/ChangeLog,v 1.17 2006/08/05 04:05:13 mcummings Exp $
+
+  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
+  FreezeThaw-0.43-r1.ebuild:
+  Adding perl dep; fixed DEPEND
 
   21 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   FreezeThaw-0.43-r1.ebuild:
